--- a/features/clip-path-boxes.yml.dist
+++ b/features/clip-path-boxes.yml.dist
@@ -9,7 +9,7 @@ status:
     chrome_android: "119"
     edge: "119"
     firefox: ≤72
-    firefox_android: "79"
+    firefox_android: ≤79
     safari: "13.1"
     safari_ios: "13.4"
 compat_features:
@@ -33,7 +33,7 @@ compat_features:
   #   chrome_android: "119"
   #   edge: "119"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.clip-path.view-box
