--- a/features/cursor.yml.dist
+++ b/features/cursor.yml.dist
@@ -5,8 +5,8 @@ status:
   baseline: false
   support:
     chrome: ≤83
-    chrome_android: "83"
-    edge: "83"
+    chrome_android: ≤83
+    edge: ≤83
     firefox: ≤72
     firefox_android: "95"
     safari: ≤13.1
@@ -144,8 +144,8 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: ≤72
   #   firefox_android: "95"
   #   safari: ≤13.1
