--- a/features/data-urls.yml.dist
+++ b/features/data-urls.yml.dist
@@ -31,12 +31,12 @@ compat_features:
   - http.data-url.js_files
 
   # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
   # support:
   #   chrome: ≤4
   #   chrome_android: "18"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: ≤2
   #   firefox_android: "4"
   #   safari: ≤3.1
