--- a/features/font-synthesis.yml.dist
+++ b/features/font-synthesis.yml.dist
@@ -49,7 +49,7 @@ compat_features:
   #   chrome_android: "97"
   #   edge: "97"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - css.properties.font-synthesis.style
