--- a/features/font-variant-alternates.yml.dist
+++ b/features/font-variant-alternates.yml.dist
@@ -60,7 +60,7 @@ compat_features:
   #   chrome_android: "111"
   #   edge: "111"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.font-variant-alternates.historical-forms
