--- a/features/font-variant-position.yml.dist
+++ b/features/font-variant-position.yml.dist
@@ -5,7 +5,7 @@ status:
   baseline: false
   support:
     firefox: ≤72
-    firefox_android: "79"
+    firefox_android: ≤79
     safari: ≤13.1
     safari_ios: ≤13.4
 compat_features:
@@ -21,7 +21,7 @@ compat_features:
   # baseline: false
   # support:
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.font-variant-position.normal
