--- a/features/iframe-sandbox.yml.dist
+++ b/features/iframe-sandbox.yml.dist
@@ -50,7 +50,7 @@ compat_features:
   #   chrome_android: "18"
   #   edge: "79"
   #   firefox: ≤49
-  #   firefox_android: "49"
+  #   firefox_android: ≤49
   #   safari: "5"
   #   safari_ios: "4"
   - html.elements.iframe.sandbox.allow-forms
@@ -65,7 +65,7 @@ compat_features:
   #   chrome_android: "18"
   #   edge: "79"
   #   firefox: ≤49
-  #   firefox_android: "49"
+  #   firefox_android: ≤49
   #   safari: "5"
   #   safari_ios: "4.2"
   - html.elements.iframe.sandbox.allow-top-navigation
