--- a/features/input-range.yml.dist
+++ b/features/input-range.yml.dist
@@ -32,8 +32,8 @@ compat_features:
   # baseline_low_date: 2023-01-17
   # support:
   #   chrome: ≤67
-  #   chrome_android: "67"
-  #   edge: ≤79
+  #   chrome_android: ≤67
+  #   edge: "79"
   #   firefox: "109"
   #   firefox_android: "109"
   #   safari: "12.1"
