--- a/features/line-break.yml.dist
+++ b/features/line-break.yml.dist
@@ -7,8 +7,8 @@ status:
   baseline_high_date: 2023-01-28
   support:
     chrome: ≤83
-    chrome_android: "83"
-    edge: "83"
+    chrome_android: ≤83
+    edge: ≤83
     firefox: ≤72
     firefox_android: "79"
     safari: ≤13.1
@@ -46,8 +46,8 @@ compat_features:
   # baseline_high_date: 2023-01-28
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: ≤72
   #   firefox_android: "79"
   #   safari: ≤13.1
