--- a/features/logical-properties.yml.dist
+++ b/features/logical-properties.yml.dist
@@ -143,7 +143,7 @@ compat_features:
   #   chrome_android: "87"
   #   edge: "87"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "14.1"
   #   safari_ios: "14.5"
   - css.properties.inset-block-end.auto
