--- a/features/page-orientation.yml.dist
+++ b/features/page-orientation.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "85"
     chrome_android: "85"
     edge: "85"
+    firefox: "122"
+    firefox_android: "122"
 compat_features:
   - css.at-rules.page.page-orientation
