--- a/features/ruby-position.yml.dist
+++ b/features/ruby-position.yml.dist
@@ -26,7 +26,7 @@ compat_features:
   #   chrome_android: "84"
   #   edge: "84"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   - css.properties.ruby-position.over
   - css.properties.ruby-position.under
 
