--- a/features/svg-filters.yml.dist
+++ b/features/svg-filters.yml.dist
@@ -454,7 +454,7 @@ compat_features:
   # baseline_high_date: 2022-07-15
   # support:
   #   chrome: ≤53
-  #   chrome_android: "53"
+  #   chrome_android: ≤53
   #   edge: "79"
   #   firefox: "35"
   #   firefox_android: "35"
@@ -479,27 +479,27 @@ compat_features:
   - svg.elements.feComposite.k4
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: ≤80
-  #   chrome_android: "80"
-  #   edge: "80"
+  #   chrome_android: ≤80
+  #   edge: ≤80
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.color-interpolation-filters
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.color-interpolation-filters.auto
