--- a/features/text-emphasis.yml.dist
+++ b/features/text-emphasis.yml.dist
@@ -53,7 +53,7 @@ compat_features:
   #   chrome_android: "99"
   #   edge: "99"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.text-emphasis-style.circle
