--- a/features/text-orientation.yml.dist
+++ b/features/text-orientation.yml.dist
@@ -36,7 +36,7 @@ compat_features:
   #   chrome_android: "48"
   #   edge: "79"
   #   firefox: ≤44
-  #   firefox_android: "44"
+  #   firefox_android: ≤44
   #   safari: "14"
   #   safari_ios: "14"
   - css.properties.text-orientation.sideways
@@ -46,10 +46,10 @@ compat_features:
   # baseline_high_date: 2023-03-16
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "14"
   #   safari_ios: "14"
   - css.properties.text-orientation.mixed
