--- a/features/wasm-bulk-memory.yml.dist
+++ b/features/wasm-bulk-memory.yml.dist
@@ -8,7 +8,7 @@ status:
   support:
     chrome: "75"
     chrome_android: "75"
-    edge: ≤80
+    edge: "79"
     firefox: "78"
     firefox_android: "79"
     safari: "15.1"
