--- a/features/wasm-mutable-globals.yml.dist
+++ b/features/wasm-mutable-globals.yml.dist
@@ -8,7 +8,7 @@ status:
   support:
     chrome: "69"
     chrome_android: "69"
-    edge: ≤80
+    edge: "79"
     firefox: "62"
     firefox_android: "62"
     safari: ≤13.1
