--- a/features/alignment-baseline.yml.dist
+++ b/features/alignment-baseline.yml.dist
@@ -5,28 +5,12 @@ status:
   baseline: false
   support:
     chrome: ≤80
-    chrome_android: "80"
-    edge: "80"
+    chrome_android: ≤80
+    edge: ≤80
     safari: ≤13.1
     safari_ios: ≤13.4
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: ≤80
-  #   chrome_android: "80"
-  #   edge: ≤80
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
   - css.properties.alignment-baseline
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: ≤80
-  #   chrome_android: "80"
-  #   edge: "80"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
   - css.properties.alignment-baseline.alphabetic
   - css.properties.alignment-baseline.baseline
   - css.properties.alignment-baseline.central
