--- a/features/background-position.yml.dist
+++ b/features/background-position.yml.dist
@@ -69,14 +69,14 @@ compat_features:
   - css.properties.background-position-y
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
-  #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "79"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.background-position.bottom
