--- a/features/background-size.yml.dist
+++ b/features/background-size.yml.dist
@@ -3,14 +3,14 @@
 
 status:
   baseline: high
-  baseline_low_date: 2020-07-28
-  baseline_high_date: 2023-01-28
+  baseline_low_date: ≤2020-07-28
+  baseline_high_date: ≤2023-01-28
   support:
     chrome: "21"
     chrome_android: "25"
     edge: "12"
     firefox: ≤72
-    firefox_android: "79"
+    firefox_android: ≤79
     safari: "5.1"
     safari_ios: "4.2"
 compat_features:
@@ -43,14 +43,14 @@ compat_features:
   - css.properties.background.background-size
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: "3"
   #   chrome_android: "18"
   #   edge: "12"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "5"
   #   safari_ios: "4.2"
   - css.properties.background-size.auto
