--- a/features/baseline-shift.yml.dist
+++ b/features/baseline-shift.yml.dist
@@ -5,8 +5,8 @@ status:
   baseline: false
   support:
     chrome: ≤80
-    chrome_android: "80"
-    edge: "80"
+    chrome_android: ≤80
+    edge: ≤80
     safari: ≤13.1
     safari_ios: ≤13.4
 compat_features:
