--- a/features/border-image.yml.dist
+++ b/features/border-image.yml.dist
@@ -111,28 +111,28 @@ compat_features:
   - css.properties.border-image-repeat.space
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: "15"
   #   chrome_android: "18"
   #   edge: "12"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "6"
   #   safari_ios: "9.3"
   - css.properties.border-image-repeat.repeat
   - css.properties.border-image-repeat.stretch
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
+  #   chrome_android: ≤83
   #   edge: "12"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.border-image-width.auto
