--- a/features/column-breaks.yml.dist
+++ b/features/column-breaks.yml.dist
@@ -39,7 +39,7 @@ compat_features:
   # baseline_high_date: 2024-03-07
   # support:
   #   chrome: ≤80
-  #   chrome_android: "80"
+  #   chrome_android: ≤80
   #   edge: ≤80
   #   firefox: "92"
   #   firefox_android: "92"
@@ -50,7 +50,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: ≤80
-  #   chrome_android: "80"
+  #   chrome_android: ≤80
   #   edge: ≤80
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
