--- a/features/counters.yml.dist
+++ b/features/counters.yml.dist
@@ -70,16 +70,16 @@ compat_features:
   - css.properties.counter-reset.none
 
   # baseline: high
-  # baseline_low_date: 2020-05-19
-  # baseline_high_date: 2022-11-19
+  # baseline_low_date: 2015-09-30
+  # baseline_high_date: 2018-03-30
   # support:
-  #   chrome: ≤83
-  #   chrome_android: "83"
+  #   chrome: "28"
+  #   chrome_android: "28"
   #   edge: "12"
   #   firefox: "1"
   #   firefox_android: "25"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "9"
+  #   safari_ios: "9"
   - css.properties.counter-increment.list-item
 
   # baseline: false
