--- a/features/hsl.yml.dist
+++ b/features/hsl.yml.dist
@@ -42,11 +42,14 @@ compat_features:
   - css.types.color.hsl.alpha_parameter
   - css.types.color.hsl.space_separated_parameters
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-09-16
   # support:
   #   chrome: "121"
   #   chrome_android: "121"
   #   edge: "121"
   #   firefox: "122"
   #   firefox_android: "122"
+  #   safari: "18"
+  #   safari_ios: "18"
   - css.types.color.hsl.mixed_type_parameters
