--- a/features/list-style.yml.dist
+++ b/features/list-style.yml.dist
@@ -112,14 +112,14 @@ compat_features:
   - css.properties.list-style-type.upper-armenian
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: "1"
   #   safari_ios: "1"
   - css.properties.list-style-type.none
