--- a/features/overscroll-behavior.yml.dist
+++ b/features/overscroll-behavior.yml.dist
@@ -69,7 +69,7 @@ compat_features:
   # baseline_low_date: 2022-09-12
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
+  #   chrome_android: ≤83
   #   edge: "79"
   #   firefox: "59"
   #   firefox_android: "59"
@@ -81,8 +81,8 @@ compat_features:
   # baseline_low_date: 2022-09-12
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: "59"
   #   firefox_android: "59"
   #   safari: "16"
