--- a/features/paint-order.yml.dist
+++ b/features/paint-order.yml.dist
@@ -8,7 +8,7 @@ status:
     chrome_android: "123"
     edge: "123"
     firefox: ≤66
-    firefox_android: "66"
+    firefox_android: ≤66
     safari: ≤12
 compat_features:
   # baseline: low
@@ -26,9 +26,9 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: ≤73
-  #   chrome_android: "73"
-  #   edge: ≤79
+  #   chrome_android: ≤73
+  #   edge: "79"
   #   firefox: ≤66
-  #   firefox_android: "66"
+  #   firefox_android: ≤66
   #   safari: ≤12
   - svg.global_attributes.paint-order
