--- a/features/text-decoration.yml.dist
+++ b/features/text-decoration.yml.dist
@@ -45,14 +45,14 @@ compat_features:
   - css.properties.text-decoration-style.wavy
 
   # baseline: high
-  # baseline_low_date: 2020-07-28
-  # baseline_high_date: 2023-01-28
+  # baseline_low_date: ≤2020-07-28
+  # baseline_high_date: ≤2023-01-28
   # support:
   #   chrome: ≤83
-  #   chrome_android: "83"
-  #   edge: "83"
+  #   chrome_android: ≤83
+  #   edge: ≤83
   #   firefox: ≤72
-  #   firefox_android: "79"
+  #   firefox_android: ≤79
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.text-decoration-line.line-through
