--- a/features/webvtt.yml.dist
+++ b/features/webvtt.yml.dist
@@ -47,8 +47,8 @@ compat_features:
   # baseline_low_date: 2024-06-11
   # support:
   #   chrome: ≤80
-  #   chrome_android: "80"
-  #   edge: "80"
+  #   chrome_android: ≤80
+  #   edge: ≤80
   #   firefox: "127"
   #   firefox_android: "127"
   #   safari: "17.5"
