--- a/features/number.yml
+++ b/features/number.yml
@@ -74,6 +74,7 @@ compat_features:
   - javascript.builtins.Number.toString
   - javascript.builtins.Number.valueOf
   - javascript.builtins.parseInt
+  - javascript.builtins.parseInt.leading_zero_strings_as_decimal
   - javascript.grammar.binary_numeric_literals
   - javascript.grammar.decimal_numeric_literals
   - javascript.grammar.hexadecimal_numeric_literals
