--- a/features/number.yml.dist
+++ b/features/number.yml.dist
@@ -88,6 +88,19 @@ compat_features:
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
   # support:
+  #   chrome: "23"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "21"
+  #   firefox_android: "21"
+  #   safari: "6"
+  #   safari_ios: "6"
+  - javascript.builtins.parseInt.leading_zero_strings_as_decimal
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
   #   chrome: "28"
   #   chrome_android: "28"
   #   edge: "12"
