--- a/features/file.yml
+++ b/features/file.yml
@@ -1,4 +1,4 @@
-name: File
+name: File API
 description: The `File` API provides information about files and allows JavaScript in a web page to create new files, and access existing files and their contents.
 spec: https://w3c.github.io/FileAPI/
 caniuse: fileapi
