--- a/features/indexeddb.yml
+++ b/features/indexeddb.yml
@@ -1,17 +1,4 @@
-# A known hard part here is that api.IDBFactory.open has a showstopper bug in
-# some releases of Safari 14: https://bugs.webkit.org/show_bug.cgi?id=226547
-# It's likely that api.IDBFactory.open should be marked as having an
-# interruption (or partial_implementation) in support there. This would break
-# consistency caniuse, however. To fix *that* would require PRs on both BCD and
-# web-features. It's also probable that we would want to add a note to the
-# feature about this fact, see:
-# https://github.com/web-platform-dx/web-features/issues/557
-#
-# Unknown hard parts are that there may be other parts of IndexedDB with such
-# issues. Someone who's knowledgeable about IndexedDB ought to author or review
-# this feature.
-draft_date: 2024-07-11
-name: IndexedDB
+mame: IndexedDB
 description: The IndexedDB API is a local storage transactional object database.
 spec: https://w3c.github.io/IndexedDB/
 caniuse:
@@ -24,6 +11,8 @@ status:
     - api.IDBCursor.continuePrimaryKey
     - api.IDBCursor.key.binary_keys
     - api.IDBIndex.getKey
+    # open() has a showstopper bug in some releases of Safari 14 https://bugs.webkit.org/show_bug.cgi?id=226547
+    - api.IDBFactory.open
 compat_features:
   - api.IDBCursor
   - api.IDBCursor.worker_support
