Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/wasm-typed-fun-refs.yml
+++ b/features/wasm-typed-fun-refs.yml
@@ -1,5 +1,5 @@
 name: Typed function references (WebAssembly)
-description: Function references that are typed and that can be called directly.
+description: A typed function reference can be called directly.
 spec: https://github.com/WebAssembly/function-references/blob/main/proposals/function-references/Overview.md
 group: webassembly
 compat_features:
