--- a/features/wasm-string-builtins.yml
+++ b/features/wasm-string-builtins.yml
@@ -1,4 +1,4 @@
-name: JavaScript string builtins (WebAssembly)
+name: String builtins (WebAssembly)
 description: The WebAssembly builtin string functions mirror a subset of the JavaScript `String` API and adapt it to be efficiently callable without JavaScript glue code.
 spec: https://github.com/WebAssembly/js-string-builtins/blob/main/proposals/js-string-builtins/Overview.md
 group: webassembly
