--- a/features/matchmedia.yml
+++ b/features/matchmedia.yml
@@ -1,5 +1,5 @@
 name: matchMedia
-description: The `Window.matchMedia` API is used to determine whether or not a media query applies to the document.
+description: The `window.matchMedia()` method checks whether a media query applies to the document.
 spec: https://drafts.csswg.org/cssom-view-1/#dom-window-matchmedia
 caniuse: matchmedia
 compat_features:
