--- a/features/scroll-elements.yml
+++ b/features/scroll-elements.yml
@@ -5,6 +5,7 @@ caniuse: element-scroll-methods
 status:
   compute_from:
     - api.Element.scroll
+    - api.Element.scroll.options_behavior_parameter
 compat_features:
   - api.Document.scroll_event
   - api.Document.scrollingElement
