--- a/features/cors.yml
+++ b/features/cors.yml
@@ -17,3 +17,4 @@ compat_features:
   - http.headers.Access-Control-Max-Age
   - http.headers.Access-Control-Request-Headers
   - http.headers.Access-Control-Request-Method
+  - http.headers.Cross-Origin-Resource-Policy
