--- a/features/speculation-rules.yml
+++ b/features/speculation-rules.yml
@@ -20,6 +20,7 @@ compat_features:
   - html.elements.script.type.speculationrules.urls
   - html.elements.script.type.speculationrules.where
   - http.headers.Content-Security-Policy.script-src.inline-speculation-rules
+  - http.headers.Sec-Purpose.speculationrules
   - http.headers.Speculation-Rules
   - http.headers.Supports-Loading-Mode
   - http.headers.Supports-Loading-Mode.credentialed-prerender
