--- a/features/speculation-rules.yml.dist
+++ b/features/speculation-rules.yml.dist
@@ -45,6 +45,7 @@ compat_features:
   #   chrome_android: "110"
   #   edge: "110"
   - http.headers.Content-Security-Policy.script-src.inline-speculation-rules
+  - http.headers.Sec-Purpose.speculationrules
 
   # baseline: false
   # support:
