--- a/features/events.yml
+++ b/features/events.yml
@@ -1,5 +1,5 @@
 name: Events
-description: Events fire when significant things happen in the page, such as an image loading or a user clicking. You can use the `addEventListener()` method on objects that receive events (event targets), such as windows, documents, and elements, to set a function to be called when an event fires.
+description: The `Event` API and the `addEventListener()` method on objects that receive events (event targets) represent and handle significant things happening on a page. Many APIs fire events for a wide range of situations relating to those APIs, such as an image loading, a user clicking, or a value changing.
 spec:
   - https://html.spec.whatwg.org/multipage/indices.html#events-2
   - https://dom.spec.whatwg.org/#interface-customevent
