Add global attributes

--- a/features/csp.yml
+++ b/features/csp.yml
@@ -26,6 +26,7 @@ compat_features:
   - api.CSPViolationReportBody.toJSON
   - api.Document.securitypolicyviolation_event
   - api.Element.securitypolicyviolation_event
+  - api.HTMLElement.nonce
   - api.HTMLIFrameElement.csp
   - api.SecurityPolicyViolationEvent
   - api.SecurityPolicyViolationEvent.SecurityPolicyViolationEvent
