--- a/features/details.yml.dist
+++ b/features/details.yml.dist
@@ -55,3 +55,4 @@ compat_features:
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - api.HTMLElement.toggle_event
+  - api.HTMLElement.toggle_event.details_elements
