--- a/features/dialog.yml
+++ b/features/dialog.yml
@@ -12,5 +12,6 @@ compat_features:
   - api.HTMLDialogElement.returnValue
   - api.HTMLDialogElement.show
   - api.HTMLDialogElement.showModal
+  - api.HTMLElement.toggle_event.dialog_elements
   - html.elements.dialog
   - html.elements.dialog.open
