--- a/features/popover.yml.dist
+++ b/features/popover.yml.dist
@@ -4,12 +4,8 @@
 status:
   baseline: false
   support:
-    chrome: "114"
-    chrome_android: "114"
-    edge: "114"
-    firefox: "125"
-    firefox_android: "125"
-    safari: "17"
+    firefox: "133"
+    firefox_android: "133"
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-11-21
@@ -54,7 +50,18 @@ compat_features:
   - html.elements.input.popovertargetaction
   - html.global_attributes.popover
 
-  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2024-04-16
+  # support:
+  #   chrome: "116"
+  #   chrome_android: "116"
+  #   edge: "116"
+  #   firefox: "125"
+  #   firefox_android: "125"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.HTMLElement.togglePopover.returns_boolean
+
   # baseline: false
   # support:
   #   chrome: "114"
@@ -64,3 +71,10 @@ compat_features:
   #   firefox_android: "125"
   #   safari: "17"
   - api.HTMLElement.popover
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   firefox: "133"
+  #   firefox_android: "133"
+  - api.HTMLElement.beforetoggle_event.dialog_elements
