--- a/features/details.yml
+++ b/features/details.yml
@@ -9,5 +9,6 @@ compat_features:
   - api.HTMLDetailsElement
   - api.HTMLDetailsElement.open
   - api.HTMLElement.toggle_event
+  - api.HTMLElement.toggle_event.details_elements
   - html.elements.details
   - html.elements.details.open
