--- a/features/top-level-await.yml
+++ b/features/top-level-await.yml
@@ -1,5 +1,5 @@
 name: Top-level await
-description: Use the `await` keyword outside of async functions and at the top level of modules.
+description: The `await` keyword, when used at the top level of a module (outside of an async function), delays parent module execution until after a promise fulfills.
 spec: https://tc39.es/ecma262/multipage/ecmascript-language-functions-and-classes.html#sec-async-function-definitions
 group: javascript
 compat_features:
