move to functions

--- a/features/functions.yml
+++ b/features/functions.yml
@@ -44,3 +44,4 @@ compat_features:
   - javascript.operators.function.trailing_comma
   - javascript.statements.function
   - javascript.statements.function.trailing_comma_in_parameters
+  - javascript.grammar.trailing_commas.trailing_commas_in_functions
