--- a/features/functions.yml.dist
+++ b/features/functions.yml.dist
@@ -298,6 +298,7 @@ compat_features:
   #   firefox_android: "52"
   #   safari: "10"
   #   safari_ios: "10"
+  - javascript.grammar.trailing_commas.trailing_commas_in_functions
   - javascript.operators.function.trailing_comma
   - javascript.statements.function.trailing_comma_in_parameters
 
