Add sensor interfaces to all specific sensors

--- a/features/accelerometer.yml.dist
+++ b/features/accelerometer.yml.dist
@@ -27,6 +27,18 @@ compat_features:
   - api.Accelerometer.z
   - api.LinearAccelerationSensor
   - api.LinearAccelerationSensor.LinearAccelerationSensor
+  - api.Sensor
+  - api.Sensor.activate_event
+  - api.Sensor.activated
+  - api.Sensor.error_event
+  - api.Sensor.hasReading
+  - api.Sensor.reading_event
+  - api.Sensor.start
+  - api.Sensor.stop
+  - api.Sensor.timestamp
+  - api.SensorErrorEvent
+  - api.SensorErrorEvent.SensorErrorEvent
+  - api.SensorErrorEvent.error
 
   # baseline: false
   # support:
