--- a/features/accelerometer.yml
+++ b/features/accelerometer.yml
@@ -18,3 +18,15 @@ compat_features:
   - api.LinearAccelerationSensor.LinearAccelerationSensor
   - api.Permissions.permission_accelerometer
   - http.headers.Permissions-Policy.accelerometer
+  - api.Sensor
+  - api.Sensor.activate_event
+  - api.Sensor.activated
+  - api.Sensor.error_event
+  - api.Sensor.hasReading
+  - api.Sensor.reading_event
+  - api.Sensor.start
+  - api.Sensor.stop
+  - api.Sensor.timestamp
+  - api.SensorErrorEvent
+  - api.SensorErrorEvent.SensorErrorEvent
+  - api.SensorErrorEvent.error
