--- a/features/ambient-light.yml.dist
+++ b/features/ambient-light.yml.dist
@@ -5,6 +5,27 @@ status:
   baseline: false
   support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "67"
+  #   chrome_android: "67"
+  #   edge: "79"
+  - api.Sensor
+  - api.Sensor.activate_event
+  - api.Sensor.activated
+  - api.Sensor.error_event
+  - api.Sensor.hasReading
+  - api.Sensor.reading_event
+  - api.Sensor.start
+  - api.Sensor.stop
+  - api.Sensor.timestamp
+  - api.SensorErrorEvent
+  - api.SensorErrorEvent.SensorErrorEvent
+  - api.SensorErrorEvent.error
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
   - api.AmbientLightSensor
   - api.AmbientLightSensor.AmbientLightSensor
   - api.AmbientLightSensor.illuminance
