--- a/features/gyroscope.yml
+++ b/features/gyroscope.yml
@@ -13,3 +13,15 @@ compat_features:
   - api.Permissions.permission_gyroscope
   - html.elements.iframe.allow.gyroscope
   - http.headers.Permissions-Policy.gyroscope
+  - api.Sensor
+  - api.Sensor.activate_event
+  - api.Sensor.activated
+  - api.Sensor.error_event
+  - api.Sensor.hasReading
+  - api.Sensor.reading_event
+  - api.Sensor.start
+  - api.Sensor.stop
+  - api.Sensor.timestamp
+  - api.SensorErrorEvent
+  - api.SensorErrorEvent.SensorErrorEvent
+  - api.SensorErrorEvent.error
