--- a/features/orientation-sensor.yml
+++ b/features/orientation-sensor.yml
@@ -12,3 +12,15 @@ compat_features:
   - api.AbsoluteOrientationSensor.AbsoluteOrientationSensor
   - api.RelativeOrientationSensor
   - api.RelativeOrientationSensor.RelativeOrientationSensor
+  - api.Sensor
+  - api.Sensor.activate_event
+  - api.Sensor.activated
+  - api.Sensor.error_event
+  - api.Sensor.hasReading
+  - api.Sensor.reading_event
+  - api.Sensor.start
+  - api.Sensor.stop
+  - api.Sensor.timestamp
+  - api.SensorErrorEvent
+  - api.SensorErrorEvent.SensorErrorEvent
+  - api.SensorErrorEvent.error
